--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "penner",
   "version": "0.1.0",
   "description": "Penner's easing equations",
+  "main": "penner.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/eighttrackmind/penner.git"
