--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "penner",
-  "version": "0.1.2",
-  "description": "Penner's easing equations",
+  "version": "0.1.3",
+  "description": "Penner's easing equations, in JavaScript",
   "main": "penner.js",
   "repository": {
     "type": "git",
@@ -15,9 +15,9 @@
     }
   ],
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-coffee": "~0.7.0"
+    "grunt": "^0.4.5",
+    "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-uglify": "^0.9.2"
   },
   "license": "MIT",
   "readmeFilename": "README.md",
